Fix T52763: Boolean problem with vertex group